--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,8 @@
-aiohttp==3.7.4.post0
-async-timeout==3.0.1
-attrs==21.4.0
-chardet==4.0.0
-click==8.0.3
-colorama==0.4.4
-cycler==0.11.0
-discord.py==1.7.3
-fonttools==4.29.1
-gunicorn==20.1.0
-idna==3.3
-joblib==1.1.0
-kiwisolver==1.3.2
-matplotlib==3.5.1
-multidict==6.0.2
-nltk==3.6.5
-numpy==1.22.2
-opencv-python==4.5.5.62
-packaging==21.3
-pandas==1.4.1
-Pillow==9.0.1
-pyparsing==3.0.7
-python-dateutil==2.8.2
-pytz==2021.3
-regex==2021.11.10
-scipy==1.8.0
-six==1.16.0
-tqdm==4.62.3
-typing_extensions==4.2.0
-whitenoise==5.3.0
-yarl==1.7.2
+aiohttp
+async-timeout
+discord
+discord.py
+numpy
+motor
+umongo
+dnspython
